--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Unwanted App Files
+.sass-cache/
+Styles/MetricsDisplayApp.css.map
